# nexus-agent

./: .gitignore  CLAUDE.md  README.md  pom.xml  开发日志.md
nexus-agent-common/: pom.xml
nexus-agent-common/src/main/java/com/huzhijian/nexusagentweb/content/: MetadataKeyContent.java  ModelSystemContent.java  RedisContent.java
nexus-agent-common/src/main/java/com/huzhijian/nexusagentweb/context/: MessageMetadataContext.java  UserConfigContextHolder.java  UserContextHolder.java
nexus-agent-common/src/main/java/com/huzhijian/nexusagentweb/em/: BizType.java  (+4 more)
nexus-agent-domain/: pom.xml
nexus-agent-mapper/: pom.xml
nexus-agent-mapper/src/main/resources/mapper/: ChatHistoryListMapper.xml  ChatMemoryMapper.xml  FileMapper.xml  KnowledgeBaseFileMapper.xml  KnowledgeBaseMapper.xml  McpInformationMapper.xml  SkillMcpInformationMapper.xml  SystemLogMapper.xml  UserConfigMapper.xml  UserMapper.xml
nexus-agent-service/: pom.xml
nexus-agent-web/: pom.xml
nexus-agent-web/src/main/java/com/huzhijian/nexusagentweb/: NexusAgentWebApplication.java
nexus-agent-web/src/main/resources/: application.properties  application.yml
nexus-agent-web/src/main/resources/static/: showHistory.html
nexus-agent-web/src/test/java/com/huzhijian/nexusagentweb/: BoxToolTest.java  NexusAgentWebApplicationTests.java  SecretTest.java
nexus_agent_box/: main.py  pyproject.toml
nexus_agent_box/app/: __init__.py
nexus_agent_box/app/routers/: box.py  execute.py  file.py  mcp.py  test2.py
nexus_agent_box/app/schema/: __init__.py  code.py  file.py
nexus_agent_box/app/utils/: oss_utils.py
(+97 files in other folders)
